Bug 1809191 - Stop setting a z-index on the selected tab as it doesn't connect to the navigation toolbar anymore. r=sfoster
Differential Revision: https://phabricator.services.mozilla.com/D166355

UltraBlame original commit: ed3409f8452feb9d7f9bd27885708bde36aed217

--- a/browser/themes/shared/tabs.css
+++ b/browser/themes/shared/tabs.css
@@ -958,48 +958,6 @@ inset
 )
 ;
 }
-/
-*
-The
-selected
-tab
-should
-appear
-above
-the
-border
-between
-the
-tabs
-toolbar
-and
-the
-navigation
-toolbar
-.
-*
-/
-.
-tabbrowser
--
-tab
-[
-visuallyselected
-=
-true
-]
-{
-position
-:
-relative
-;
-z
--
-index
-:
-2
-;
-}
 .
 tab
 -
@@ -4347,26 +4305,6 @@ position
 :
 relative
 ;
-z
--
-index
-:
-3
-;
-/
-*
-the
-selected
-tab
-'
-s
-z
--
-index
-+
-1
-*
-/
 border
 -
 bottom
@@ -5884,42 +5822,11 @@ position
 :
 relative
 ;
-/
-*
-The
-z
--
-index
-needs
-to
-be
-big
-enough
-to
-trump
-other
-positioned
-UI
-pieces
-that
-we
-want
-to
-overlay
-.
-The
-selected
-tab
-uses
-2
-.
-*
-/
 z
 -
 index
 :
-3
+2
 ;
 }
 /
